--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "iconv-lite": "^0.4.24",
     "inherits": "^2.0.4",
     "ipaddr.js": "^1.9.1",
+    "jsonwebtoken": "^8.5.1",
     "media-typer": "^0.3.0",
     "merge-descriptors": "^1.0.1",
     "methods": "^1.1.2",
@@ -63,7 +64,7 @@
     "vary": "^1.1.2"
   },
   "scripts": {
-    "start":"docker compose up -d && node main.js",
+    "start": "docker compose up -d && node main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
