--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "vary": "^1.1.2"
   },
   "scripts": {
+    "jwt":"set NODE_ENV=production&& node jwt.js",
     "start": "docker compose up -d && node main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
